--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,3 +8,16 @@ AllCops:
     - 'temp/**/*'
     - 'vendor/**/*'
     - '.git/**/*'
+    - db/migrate/*
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
+Style/StringLiterals:
+  Enabled: false
+
+Style/Documentation:
+  Enabled: false
+
+Layout/EndOfLine:
+  Enabled: false
